--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1707,3 +1707,12 @@ services:
         - ${DATA_PATH_HOST}/tomcat/logs:/usr/local/tomcat/logs
       # restart: always
 
+### PHP LTI 1.3 Example Tool ##################################
+    lti-example-tool:
+      build:
+        context: ./lti-example-tool
+      ports:
+        - 9001:80
+      networks:
+        - frontend
+        - backend
