EDIT ltijs registers platform from env vars
For easier deployment in kubernetes, registering the platform now takes
env vars instead of hard coded values. These env vars were added:

* PLATFORM_URL: This is also the platform's iss, it's often just the
platform's URL, e.g.: https://canvas.instructure.com
* PLATFORM_NAME: Provide a name for the platform, e.g.: Canvas
* PLATFORM_CLIENT_ID: Provide the client ID that the platform has given
to this tool, e.g.: 10000000000001
* PLATFORM_AUTH_ENDPOINT: The authorization request endpoint for this
platform, e.g: https://canvas.instructure.com/api/lti/authorize
* PLATFORM_ACCESS_TOKEN_ENDPOINT: The endpoint where you can request an
OAuth2 access token for LTI service calls, e.g.:
https://canvas.instructure.com/login/oauth2/token
* PLATFORM_JWKS_ENDPOINT: The endpoint where you can get the public keys
of the platform in JWK format, e.g.:
https://canvas.instructure.com/api/lti/security/jwks

Note that the PLATFORM_AUTH_ENDPOINT is a special workaround due to
docker networking issues. It must point to your own computer's IP. This
issue is that LTI launch is performed by the browser, outside of the
docker network, so http://localhost/ points to shim. However, if you use
localhost for the PLATFORM_AUTH_ENDPOINT, the advertised NRPS URL will
also change to localhost. Since NRPS calls are performed inside of the
docker network, localhost doesn't point to the shim, and the call fails.
Using IP sidesteps the issue since IP works both in and out of the
docker network.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1766,6 +1766,19 @@ services:
         DB_USER: root
         DB_PASS: zcW2398DSLkjsUPiod
         LTI_KEY: notusedforlti13
+        PLATFORM_URL: http://localhost
+        PLATFORM_NAME: LTI Shim
+        PLATFORM_CLIENT_ID: CLIENTID
+        # WARNING: This must be changed to your own IP. LTI launch is performed
+        # by the browser (outside of the docker network), so http://localhost/
+        # would work here for the launch. However, if you use localhost here,
+        # the advertised NRPS URL will also change to localhost. Since NRPS
+        # calls are performed inside of the docker network, localhost doesn't
+        # point to the shim, and the call fails. Using IP sidesteps the issue
+        # since IP works both in and out of the docker network.
+        PLATFORM_AUTH_ENDPOINT: http://192.168.55.182/lti/launch/platform/auth
+        PLATFORM_ACCESS_TOKEN_ENDPOINT: http://nginx/lti/security/platform/token
+        PLATFORM_JWKS_ENDPOINT: http://nginx/lti/platform/jwks
 
     ltijs-demo-server-db:
       image: "mongo:4"
